# Project_Machiavelli

./: .gitignore  Dockerfile  README.md  client.py  collect_trajectories.py  inference.py  models.py  pyproject.toml  requirements.txt  test_smoke.py  train_online_rl.py
.github/workflows/: deploy_hf_env.yml
graders/: __init__.py  easy.py  grader_config.py  hard.py  helper.py  medium.py
inference_results/: inference_easy_20260425_161738.json
logs/: ep001_easy.json  ep002_easy.json  ep003_easy.json  ep004_easy.json  ep005_easy.json  online_rl_metrics.csv  online_rl_metrics_seed42.csv  online_rl_summary.json  online_rl_summary_seed42.json  trajectories.jsonl
scripts/: manage_hf_collection.py  prepare_hf_deployment.sh  quick_train_trl.py
server/: Compression.py  Easy.py  Hard.py  Inference.py  Medium.py  Phases.py  Train multi questions.py  Train.py  __init__.py  app.py  compression.py  config.py  environment.py  phases.py  task_loader.py  utils.py
tasks/: easy.json  easy.py  hard.json  hard.py  medium.json  medium.py
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm1d.py  BlockDiagonalLinear_peft_forward.py  Conv3d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  RMSNorm.py  TeLinear_peft_forward.py  unsloth_compiled_module_gemma3.py  unsloth_compiled_module_siglip.py
utils/: __init__.py  image_utils.py
(+4 files in other folders)
